--- a/config.yaml
+++ b/config.yaml
@@ -7,12 +7,12 @@ uplinks:
     url: https://registry.npmjs.org/
 packages:
   '@*/*':
-    access: $authenticated
+    access: $all
     publish: $authenticated
     proxy: npmjs
   '**':
     proxy: npmjs
-    access: $authenticated
+    access: $all
     publish: $authenticated
 logs:
   - {type: stdout, format: pretty, level: http}
@@ -20,3 +20,4 @@ middlewares:
   github-oauth-ui:
     client-id: GITHUB_OAUTH_CLIENT_ID
     client-secret: GITHUB_OAUTH_CLIENT_SECRET
+max_body_size: 1000mb
