--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,3 @@
-storage: ./storage
 auth:
   github-oauth-ui:
     org: GITHUB_OAUTH_ORG
@@ -21,3 +20,8 @@ middlewares:
     client-id: GITHUB_OAUTH_CLIENT_ID
     client-secret: GITHUB_OAUTH_CLIENT_SECRET
 max_body_size: 1000mb
+store:
+  aws-s3-storage:
+      bucket: S3_BUCKET
+      accessKeyId: AWS_ACCESS_KEY_ID
+      secretAccessKey: AWS_SECRET_ACCESS_KEY
